makema page update

--- a/child_pages/cc-elections/Candidates/carman.html
+++ b/child_pages/cc-elections/Candidates/carman.html
@@ -577,7 +577,8 @@
         <br><br>
             
      <div class="candidate-agenda"> 
-        <h4 class="sub-heading">Agenda</h4> <div class="experience can-sec"> 
+        <h4 class="sub-heading">Agenda</h4> 
+        <div class="experience can-sec"> 
             <ul> 
                 <li>
                    <details> 
