--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -341,67 +341,141 @@
     </details>
 
     <div class="candidate-agenda">
+
+        <h4 class="sub-heading">Agenda</h4>
+        <div class="experience can-sec">
+        <br>
+
         
-        <h4 class="sub-heading">Personal Agenda</h4>
-        
-            <div class="agenda-thesis">
-                <details>
-                <summary style="display: inline-block; background-color: #007BFF; color: white; padding: 6px 12px; border-radius: 6px; font-weight: bold; cursor: pointer;">
-                    Info from Prior Elections
+            <details>
+                <summary style="display: inline-block; background-color: #28A745; color: white; padding: 6px 12px; border-radius: 6px; font-weight: bold; cursor: pointer;">
+                    2025 Agenda & Priorities
                 </summary>
-                    Supports methods to ensure school safety for students and staff. <a href="https://www.facebook.com/reel/6412822538766411" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
-                    <br>
-                    <br>
-                    Redirecting focus on programs that reinforce school resilience for teachers and students.
-                    <br>
-                    <br>
-                    Restoring community faith in the Vineland School System and its administration's ability to effectively lead.
-                    <br>
-                    <br>
-                    Ensuring that teachers, parents, students, and residents have representation in decision making regarding practices, policies, and procedures.
-                    <br>
-                    <br>
-                    Supports fighting for fair and equitable wages for staff and faculty. 
-                    <br>
-                    <br>
-                    Wants to focus on core studies such as language arts, math, and sciences.
-                    <br>
-                    <br>
-                    Supports parent involvement.
-                    <br>
-                    <br>
-                    Stands on fair, reasonable, and equitable thinking and representation. <a href="https://www.facebook.com/reel/250888890835092" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
-                </details>
-            </div>
+                <p>
+                    Makema Douglas’s current focus is to strengthen communication and transparency between administration, faculty, parents, and students. She wants timely parent notification regarding 
+                    changes in a child’s academic performance, scheduling, transportation, grade-level promotion, and graduation readiness. 
+                </p>
+                <p>
+                    She emphasizes working closely with administration so all departments follow updated regulations, policies, standards, and best practices, especially as changes unfold within the 
+                    Department of Education. Her stated goal is to ensure that funding, job security, and the school experience are managed openly and responsibly for all stakeholders.
+                </p>
+            </details>
 
-            <br>
+        </div>
 
-            <h4 class="sub-heading">Policy Positions</h4>
-            <div class="policy-positions can-sec">
-                <details>
-                <summary style="display: inline-block; background-color: #007BFF; color: white; padding: 6px 12px; border-radius: 6px; font-weight: bold; cursor: pointer;">
-                    Info from Prior Elections
+    <br>
+    <br>
+
+
+        <h4 class="sub-heading">Issues</h4>
+        <div class="experience can-sec">
+            <details>
+                <summary style="display: inline-block; background-color: #28A745; color: white; padding: 6px 12px; border-radius: 6px; font-weight: bold; cursor: pointer;">
+                    2025 Issues & Positions
                 </summary>
-                    <a href="https://www.facebook.com/reel/252278514447760" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
-                    <br>
-                    <br>
-                    Supports multiculturalism. Reposted on <a href="https://www.facebook.com/VinelandCity/posts/pfbid08vMcUuNUZQatUwiL4GW5TfU9WsCezvJvV2aokYfXYf3uG3taP81mrbm3hv9QZp4Fl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
-                    <br>
-                    <br>
-                    Supports voting for change of leadership on the board. <a href="https://www.facebook.com/VinelandCity/posts/pfbid08vMcUuNUZQatUwiL4GW5TfU9WsCezvJvV2aokYfXYf3uG3taP81mrbm3hv9QZp4Fl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
-                    <br>
-                    <br>
-                    Wants to fortify security at schools.  <a href="https://www.facebook.com/reel/6412822538766411" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
-                </details>
-            </div>
+                <p>
+                    Douglas believes that too much politics has crept into what should be a non-partisan school board system. She calls for “simple approaches” to solving problems and keeping the focus 
+                    on educating students.
+                </p>
+                <p>
+                    She supports high academic expectations and targeted accommodations for struggling students, alongside supportive and extracurricular activities such as sports, clubs, theater, arts, 
+                    community work, and collaborations. She stresses that one size does not fit all, and that each student deserves a holistic approach to education.
+                </p>
+                <p>
+                    Douglas states that the school board should remain a non-partisan entity, though she is personally aligned with many Democratic views. She promotes finding common ground and an 
+                    amicable way to approach disagreements for the benefit of students.
+                </p>
+            </details>
+        </div>
 
-            <br>
+    <br>
 
-            <h4 class="sub-heading">experience</h4>
-            <div class="experience can-sec">
-                Lifelong resident of Vineland who graduated from Vineland High School. Incumbent school board member. Educator. Parent of children who graduated from Vineland Public Schools.
-            </div>
+    <h4 class="sub-heading">Experience</h4>
+    <div class="experience can-sec">
+        <p>
+            Lifelong resident of Vineland and graduate of Vineland High School. Former school board member, educator, and parent of children who graduated from Vineland Public Schools.
+        </p>
+        <p>
+            Douglas is the only current candidate who has taught in Vineland Public Schools. Her certifications include education, leadership, supervision, and administration. She is also a community activist, former youth pastor, community program developer, author, and entrepreneur.
+        </p>
+        <p>
+            Neither she nor her husband is employed by or under contract with the city or its schools, and she does not hold a paying position with the county. She emphasizes that her sole goal is to serve the community as a volunteer, from the youngest residents to the eldest.
+        </p>
     </div>
+
+    <br>
+
+    <h4 class="sub-heading">Source Material</h4>
+    <div class="source-material can-sec">
+        <details>
+            <summary style="display: inline-block; background-color: #6C757D; color: white; padding: 6px 12px; border-radius: 6px; font-weight: bold; cursor: pointer;">
+                View Makema Douglas’s Full Questionnaire Response
+            </summary>
+            <p>
+                Overall agenda: my focus is to address the current school environment as it relates to parent notification about anything impacting their child's school experience, academic performance changes and schedule, transportation great level promotion and graduation readiness. These issues are concerning for most taxpayers, School faculty, parents and even students. There are changes that are expected to occur within the Department of Education. Most of the changes have yet to unfold and many people are concerned with how it will impact their school experience, funding, and job security.
+            </p>
+            <p>
+                I plan to accomplish these things by addressing administration to keep transparency in communication throughout channels and to work together so that all departments are following updates, regulations, policies, standards, and best practices.
+            </p>
+            <p>
+                Issue Positions: I believe the issues arise because we haven't used simple approaches to finding solutions for issues. I believe that politics have played too much a part of a non-partisan system. It is important that we keep the issues, goals and main focus about educating our students and providing them with access to a quality education that has high academic expectations, accommodations to support those students that are struggling to reach the goals and outcomes put in place, to provide supportive and extracurricular activities, such as sports, clubs, theater, arts community work, and collaborations. These factors should be present to ensure that each student will receive a holistic approach to education, in ways that best suits their ability to learn because one size does not fit all.
+            </p>
+            <p>
+                Party Affiliation: I believe the school board should remain non-partisan entity. However, I am aligned with most Democratic views. Nevertheless, if we must deal with people and their ideology , theology, or psychology we should agree to agree and agree to disagree. I believe there's an amicable way to approach every situation and that we should be able to find common ground. We must in order to do the best in providing our students with optimum opportunities for success in the school system.
+            </p>
+            <p>
+                Upcoming Campaign: I would love to be invited to more events, radio shows, and podcasts. I currently have a few interviews posted online. You can continue to look for me at more local community events and social media platforms.
+            </p>
+            <p>
+                Distinguishing Yourself from Opponents: My background distinguishes me from my opponents. I am a product of Vineland Public schools K through 12. I am the only running mate and potential person on the board that has taught in Vineland Public Schools. My certifications are in education, leadership, supervision, and administration in education.  My children attended and graduated from Vineland public schools and are productive citizens. I am a vested community activist, former youth pastor, community program developer, author and entrepreneur currently, Also, I nor my husband is employed by the city or has a contract with the city or its schools. I also do not hold a paying position for the county. My sole goal is to serve this community and its residence starting from the youngest to the eldest. I have no other agenda, and this is a volunteer position.
+            </p>
+        </details>
+    </div>
+
+    <h4 class="sub-heading">Prior Elections Info</h4>
+    <div class="policy-positions can-sec">
+        <details>
+            <summary style="display: inline-block; background-color: #007BFF; color: white; padding: 6px 12px; border-radius: 6px; font-weight: bold; cursor: pointer;">
+                Prior Agenda
+            </summary>
+            <a href="https://www.facebook.com/reel/252278514447760" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
+            <br><br>
+            Supports multiculturalism. Reposted on 
+            <a href="https://www.facebook.com/VinelandCity/posts/pfbid08vMcUuNUZQatUwiL4GW5TfU9WsCezvJvV2aokYfXYf3uG3taP81mrbm3hv9QZp4Fl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+            <br><br>
+            Supports voting for change of leadership on the board. 
+            <a href="https://www.facebook.com/VinelandCity/posts/pfbid08vMcUuNUZQatUwiL4GW5TfU9WsCezvJvV2aokYfXYf3uG3taP81mrbm3hv9QZp4Fl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
+            <br><br>
+            Wants to fortify security at schools.  
+            <a href="https://www.facebook.com/reel/6412822538766411" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
+        </details>
+
+        <div class="agenda-thesis">
+        <details>
+            <summary style="display: inline-block; background-color: #007BFF; color: white; padding: 6px 12px; border-radius: 6px; font-weight: bold; cursor: pointer;">
+                Prior Issue Stances
+            </summary>
+            Supports methods to ensure school safety for students and staff. 
+            <a href="https://www.facebook.com/reel/6412822538766411" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
+            <br><br>
+            Redirecting focus on programs that reinforce school resilience for teachers and students.
+            <br><br>
+            Restoring community faith in the Vineland School System and its administration's ability to effectively lead.
+            <br><br>
+            Ensuring that teachers, parents, students, and residents have representation in decision making regarding practices, policies, and procedures.
+            <br><br>
+            Supports fighting for fair and equitable wages for staff and faculty. 
+            <br><br>
+            Wants to focus on core studies such as language arts, math, and sciences.
+            <br><br>
+            Supports parent involvement.
+            <br><br>
+            Stands on fair, reasonable, and equitable thinking and representation. 
+            <a href="https://www.facebook.com/reel/250888890835092" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
+        </details>
+    </div>
+    </div>
+</div>
  </div>   
 </body>
 </html>
