--- a/child_pages/cc-elections/Candidates/carman.html
+++ b/child_pages/cc-elections/Candidates/carman.html
@@ -557,7 +557,7 @@
 
         <div class="gauge-box"> <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average 
             </h4> <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"> <button class="candidate-ext-site">Transparency Standards Explained</button> </a> 
-            <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt=""> 
+            <img class="gauge" src="../../../assets/gauge_okay.svg" alt=""> 
             <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> 
         </div>
 
