challenger active on makema page

--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -244,7 +244,7 @@
          </div>
          <div class="incum-or-challenger">
              <div class="incumbent inactive">Incumbent</div>
-             <div class="challenger inactive">Challenger</div> 
+             <div class="challenger active">Challenger</div> 
          </div>
      </div>
      <div class="candidate-pic-box">
