quick summary button fix attempt makema page

--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -257,7 +257,9 @@
                  <a href="https://www.facebook.com/Makema4VBOE" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a>
                  
              </div>
-             <button class="quick-summary-reopen">quick candidate summary</button>
+
+             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
              </div>
