modal fix attempt 4

--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -7,7 +7,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
-        <script src="../../../dual_model_candidate.js" defer></script>
 
         <title>Inform The Vote</title>
         <meta property="og:type" content="website">
@@ -25,6 +24,7 @@
 
   gtag('config', 'G-64FQD2P8BV');
 </script>
+        <script src="../../../dual_model_candidate.js" async></script>
 
     <body>
         <div class="menu-wrap">
@@ -134,7 +134,7 @@
             </div>
         </div>
 
-        <dialog id="myModal" class="modal">
+        <dialog id="Modal1" class="modal">
 
             <!-- Modal content -->
             <div class="modal-content">
