--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -389,7 +389,7 @@
             <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>  -->
              <details class="can-sec" id="transparency-accessibility">
             <summary style="color: blue;">
-                <strong>Transparency &amp; Accessibility: A Bit Above Average (Trending Upwards)</strong>
+                <strong>Explanation</strong>
             </summary>
             <p>
                 Makema Douglas has gone beyond the baseline by responding to our candidate questionnaire and participating in a brief “man-on-the-street” 
