capizola and garcia page updates

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -149,28 +149,28 @@
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
-                John Capizola, Jr., a former Cumberland County Commissioner and longtime educator, is once again seeking office—this time on a joint Democratic ticket with attorney 
-                Yolanda Garcia Balicki. The pair launched a Facebook page emphasizing their goal to “restore a successful county government” modeled on previous Democratic 
-                leadership: lower taxes, private-sector growth, and expanded education programs.
+                John P. “Johnny” Capizola, Jr. is a lifelong Vineland resident, educator, coach, and small-business owner now seeking a full 
+                elected term on the Cumberland County Board of Commissioners. He was appointed by the County Democratic Committee in January 
+                2023 to fill an unexpired seat and says the experience has helped him “get his feet wet” in county government while learning 
+                how to navigate what he describes as a less partisan, more collaborative board.
                 <br>
+                Capizola has taught health and physical education in Vineland Public Schools for more than 22 years, holds a master’s degree in 
+                Educational Leadership from Wilmington University (summa cum laude), and is certified as a New Jersey principal and supervisor. 
+                Outside the classroom he has coached youth sports across Vineland and Atlantic City, served on the Vineland Midget Football 
+                League board, and run small businesses including Serafina’s Ristorante & Pizzeria and Parkside Laundromat—experience he says 
+                informs his interest in attracting new business and keeping residents in the county.
                 <br>
-                While those goals are broadly appealing, the campaign has yet to offer voters clear specifics. As of this writing, there are no event listings on the county 
-                party’s official website, no substantial policy breakdowns on their joint Facebook page, and only sparse mentions of public appearances—such as a same-day post from 
-                Balicki about greeting voters at a local flea market with no time specified. Voters hoping to learn more are instead met with general political commentary and 
-                distractions on the Democrat facebook group from party and campaign affiliates, rather than useful, local election material. For engaged 
-                residents trying to stay informed, this kind of digital noise adds to the challenge of getting straight answers.
+                His campaign materials highlight broad priorities: improving educational opportunities, protecting natural resources, practicing 
+                fiscal responsibility with taxpayer dollars, enhancing roads and broadband, supporting senior housing and health care, and 
+                expanding recreational amenities. At a 2023 candidates forum he also spoke about the need for better county communication 
+                (including the launch of a new website) and a stronger local press, and stated his opposition to school vouchers.
                 <br>
-                <br>
-                It’s important to clarify: this isn’t about picking on any one candidate. But in Capizola’s case, a little tension over the years has emerged—not necessarily 
-                from personal conflict, but from a pattern of non-engagement. His prior appointment to the Board of Commissioners wasn’t the result of an election, and in an 
-                environment where transparency matters, a clearer explanation of why he was appointed—and what he did with that opportunity—feels warranted. When a candidate has 
-                the advantage of incumbency or prior experience, it’s reasonable for voters to expect a corresponding willingness to participate in open forums and respond to 
-                outreach. So far, that hasn’t materialized.
-                <br>
-                <br>
-                With two commissioner seats open and only three Democrats in the race, Capizola is statistically likely to appear on the general election ballot. That reality 
-                raises expectations. Voters deserve more than a résumé—they deserve clarity on policy, meaningful contrasts with the Republican incumbents, and reliable 
-                communication that invites public accountability.
+                So far, however, public information about Capizola’s platform and appearances has been limited mostly to a joint Facebook page 
+                with running mate Yolanda Garcia Balicki. Beyond that page there are little to no policy specifics, event listings, or clearly advertised 
+                ways for voters to interact directly with the campaign. This mirrors my own repeated attempts to reach out, which have sometimes 
+                been routed between party figures or met with silence. Voters who value his résumé and community roots may find much to like, 
+                but those seeking detailed plans or reliable public engagement may still be waiting for more concrete outreach as the campaign 
+                progresses.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -186,41 +186,23 @@
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
-                Former Commissioner Capizola has been around the political scene for several years and was appointed mid-year for his prior term as a county commissioner. With his brief time 
-                in office and prior campaigns, we can reasonably assume he’s familiar with the issues facing Cumberland County and the public expectations of a candidate running in 2025.
+                Transparency & Accessibility Rating Explanation (as of 9/11/25)
                 <br>
+                John Capizola brings a long record of local teaching, coaching, and small-business experience, and he was appointed to the Board 
+                of Commissioners in 2023. Yet despite that background, his 2025 campaign has so far offered only broad themes and a joint 
+                Facebook page with running mate Yolanda Garcia-Balicki—leaving little in the way of detailed, easily accessible issues based information.
                 <br>
-                Which makes it all the more surprising that his public-facing materials don't reflect that experience. His official bio doesn't even mention his time as commissioner—an 
-                omission that raises questions about how seriously his campaign is treating voter outreach this cycle.
+                Repeated outreach over the past two years—including emails, letters, questionnaires, and attempts to attend public events—has 
+                resulted in inconsistent communication: shifting answers about who manages the campaign, no regularly advertised public meetings, 
+                and me even being escorted out of a meet-and-greet. The net effect is that voters looking for more than a résumé still lack a clear, 
+                public-facing outline of where Capizola stands on major county issues.
                 <br>
-                <br>
-                To his credit, Capizola is known for logging countless hours door-knocking and attending political events during previous campaigns. But at a time when voters are increasingly 
-                turning to digital platforms for information, and when tools like Wix can host a campaign site in an afternoon, this traditional approach feels out of step. A 
-                well-organized candidate in 2025 should be able to share their positions widely and efficiently—not just face-to-face with those lucky enough to get a knock on their door, 
-                have spare time to attend events, or listen to phased out radio stations.
-                <br>
-                <br>
-                And that’s part of what makes this accessibility issue so glaring: Capizola lives within minutes of us. If, after two years of proactively reaching out to local 
-                candidates—including those in our own neighborhood—we still don’t have basic answers, what should the average voter expect?
-                <br>
-                <br>
-                At this stage in the game, candidates who know each other and have both served in public roles should be capable of articulating not just their own stance on key issues like 
-                the Nabb Ave Extension, but also how their platform compares to their opponent’s. Whether framed as a neutral comparison or a pointed critique, clarity is what matters—and 
-                right now, voters don’t have it.
-                <br>
-                <br>
-                That said, the rating is not permanent. Candidates with low transparency scores can improve them by clearly documenting their campaign messaging: filling out questionnaires, 
-                maintaining a basic campaign website, participating in podcast-style interviews, and sharing that information with us for public access. It’s not about giving us 
-                attention, candidates can create the content how they want— but the content should exist and be easily accessible to voters.
-                <br>
-                <br>
-                Ultimately, the root problem is often not a refusal to cooperate, but the absence of clear information in the first place. When representatives speculate that we're trying 
-                to "break a story," or accuse us of partisan motivations, they miss the point entirely. It’s 2025. The county should already be doing a better job helping residents 
-                understand their options for leadership. This platform simply serves as a proof-of-concept to fill the gap, though the county probably should do it themselves after getting 
-                the state legislature to change the laws to allow it.
-                <br>
-                <br>
-                For these reasons, Capizola receives a below-average rating for transparency and accessibility.
+                This rating isn’t totally meant as a personal critique; Cumberland County as a whole still lacks a consistently robust system for 
+                providing voters with candidate information. But at a time when transparency and accessibility are essential, Capizola and county 
+                Democrats have put themselves in a position where their message is hard for the average voter to find. The door remains open for 
+                him and his running mate to improve this by sharing substantive plans—whether through questionnaires, interviews, a comprehensive 
+                campaign website,  or scheduled campaign events—so that residents can confidently assess how they would handle the county’s 
+                challenges.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
