--- a/child_pages/cc-elections/Candidates/balicki.html
+++ b/child_pages/cc-elections/Candidates/balicki.html
@@ -142,27 +142,22 @@
               <h6 class="page-title">Yolanda Balicki</h6>
               <p>          
 
-                Yolanda Garcia Balicki, a veteran attorney and former Deputy Executive Director of the NJ State Parole Board, is running alongside former Commissioner John 
-                Capizola, Jr. as part of a Democratic ticket for Cumberland County Commissioner. Balicki brings a notable résumé, with decades of public service, civic 
-                involvement, and legal work—particularly in immigration law and educational advocacy.
+                Yolanda Garcia-Balicki is an immigration attorney with Helmer, Conley & Kasselman, P.A. in Bridgeton and Vineland and the current 
+                president of the Cumberland County Bar Association. She spent 33 years at the New Jersey State Parole Board, rising to Deputy 
+                Executive Director by gubernatorial appointment, where she oversaw complex hearings, wrote policy, and served as Equal 
+                Employment Opportunity and Affirmative Action Officer. Fluent in Spanish and deeply rooted in Vineland, she has long combined 
+                professional leadership with volunteer service in local schools and community organizations, including advocacy for the 
+                performing arts and serving on the Rowan College of South Jersey Board of Trustees and Hispanic Advisory Board.
                 <br>
+                Now running for County Commissioner on a joint Democratic ticket with John Capizola Jr., Garcia-Balicki emphasizes restoring 
+                “successful county government” while drawing on her legal background and civic involvement. Her campaign materials highlight her 
+                decades of public service and community ties but, as of this writing, provide little to no specifics on how she would address 
+                Cumberland County’s pressing issues. With only a joint Facebook page offering general statements, voters currently have limited 
+                opportunities to hear her detailed platform or attend clearly advertised events.
                 <br>
-                However, a strong professional background is not a substitute for campaign transparency, and voters looking for detailed stances from Balicki may be left wanting. 
-                As of now, her campaign—jointly run with Capizola—has provided only general messaging via a shared Facebook page. The page references the desire to “restore a 
-                successful county government” in the spirit of prior Democratic leadership, but lacks specifics on current county issues like infrastructure, social services, 
-                economic development, or transparency itself. A recent social media post indicated she would be meeting voters at a flea market, but the post was same-day and didn’t 
-                list a time, leaving little chance for voters to engage unless they happened to be there already.
-                <br>
-                <br>
-                Given her experience, one would hope for a more organized and accessible campaign effort. Instead, voters are left piecing things together while the campaign’s 
-                online presence remains mostly dormant, and the local party infrastructure offers no supplemental visibility. The party website still lists no events, and the 
-                candidates’ digital channels are largely silent on meaningful local policy.
-                <br>
-                <br>
-                This is not a personal critique—it’s a civic observation. Balicki is one of only three Democrats competing for two seats, meaning she is likely to advance to the 
-                general election. That inevitability raises the bar for engagement. Voters deserve to hear directly from candidates on how they would lead, what differentiates them 
-                from their Republican opponents, and how they plan to address the well-documented challenges Cumberland County faces. The experience is there—but the communication 
-                isn’t.
+                Her résumé and reputation suggest deep commitment to fairness and equality, but the campaign’s limited digital substance and seeming 
+                unwillingness to present and unpack a platform through outreach leaves voters piecing together clues from past roles rather than 
+                evaluating a clear, current agenda.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
