--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -249,7 +249,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/makema.jpg" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/makema.jpeg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
