balicki transparency explanation updated

--- a/child_pages/cc-elections/Candidates/balicki.html
+++ b/child_pages/cc-elections/Candidates/balicki.html
@@ -176,39 +176,24 @@
               <h6 class="page-title">Yolanda Balicki</h6>
               <p>          
 
-                Yolanda Garcia Balicki is no stranger to public service or professional leadership. A former Deputy Executive Director of the NJ State Parole Board with over three decades of 
-                government experience, she currently practices immigration law in Vineland and Bridgeton, serves as President of the Cumberland County Bar Association, and has held various 
-                community-facing roles throughout the region.
+                Garcia-Balicki’s professional record demonstrates decades of public service and community advocacy, and in person she comes across 
+                as friendly and approachable. Yet when it comes to campaign substance, she has been markedly hesitant. Despite multiple 
+                outreach attempts, there is still no comprehensive campaign website, no regularly advertised public events, and no updated statements 
+                outlining her goals for the Board of Commissioners in 2025. The only messaging available comes through a shared Facebook 
+                page with Capizola that contains broad themes but little to no actionable details.
                 <br>
                 <br>
-                Which makes it all the more surprising that her current campaign lacks any clear or accessible public-facing materials. As of this writing, there is no campaign website, no 
-                social media outreach, no publicly advertised events, and no updated statements outlining her goals for the Board of Commissioners in 2025.
+                This is not totally meant as a personal critique; Cumberland County still lacks a reliable infrastructure for helping residents 
+                access candidate information. But given Garcia-Balicki’s stature and local presence, the absence of easily accessible, substantive 
+                campaign material stands out. Voters who would otherwise be receptive to her background and values are left without a clear 
+                understanding of how she would lead on county-specific issues.
                 <br>
                 <br>
-                Despite multiple outreach attempts through known channels, we have received no response from the candidate, and voters have no clear way of learning where she stands on 
-                county-specific issues such as infrastructure development, fiscal priorities, or inter-municipal coordination. The only messaging available comes from her 2021 State Senate 
-                campaign, which, while informative about her character and motivation, cannot be assumed to reflect her current platform for this office.
-                <br>
-                <br>
-                It’s also important to note: like others in this race, Garcia Balicki works locally and lives within minutes of the communities she would serve. After two years of 
-                systematically trying to gather candidate information from within our own backyard, it should not still be this difficult to hear from those seeking public office.
-                <br>
-                <br>
-                If a candidate with such a long resume in public systems and community engagement isn’t already proactively informing the public about their vision, it raises concerns about 
-                how seriously they’re taking the responsibility of campaigning in the digital age. As a potential leader, a basic, accessible campaign infrastructure should be a given—not 
-                an afterthought.
-                <br>
-                <br>
-                That said, this rating is not set in stone. Candidates can improve their transparency score by completing a questionnaire, publishing a campaign site or platform summary, or 
-                agreeing to participate in a recorded interview. This platform exists to inform the public—it is not about chasing scoops or elevating personalities. The goal is simply to 
-                centralize and clarify the information voters deserve.
-                <br>
-                <br>
-                Speculating that our outreach has ulterior motives misses the mark. It’s 2025, and the burden should not fall on voters or independent platforms to chase down basic 
-                information. The county itself should already have a better process in place for helping residents understand their choices.
-                <br>
-                <br>
-                For these reasons, Yolanda Garcia Balicki currently receives a below-average rating for transparency and accessibility.
+                The door remains open for Garcia-Balicki to improve this rating: completing a questionnaire, participating in an interview, 
+                publishing a campaign site or platform summary, or otherwise making her positions available would give voters the clarity they 
+                deserve. Until then, her transparency and accessibility rating remains below average—not because of a lack of experience, 
+                but because the campaign’s public-facing information still stops short of what is generally expected in the politically-focused and
+                technology driven world of 2025.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
