--- a/child_pages/cc-elections/Candidates/douglas.html
+++ b/child_pages/cc-elections/Candidates/douglas.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate Makema T. Douglas">
         <meta property="og:description" content="Running For Vineland Board of Education">
-        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/makema.jpg">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/makema.jpeg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/douglas">
     </head>
 <!-- Google tag (gtag.js) -->
