events section capizola page test

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -322,7 +322,32 @@
         <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
-            
+        
+    <br>
+    <br>
+
+    <details>
+        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
+        <div style="padding:15px 25px; text-align:left;">
+            <p>
+            As of <strong>September&nbsp;11, 2025</strong>, InformTheVoteNJ searched the official
+            <a href="https://cumberlandnjdems.com" target="_blank">Cumberland County Democrats website</a>,
+            the joint Capizola/Garcia-Balicki Facebook page, and other public listings (Mobilize, local news, etc.).
+            No <strong>publicly advertised campaign events</strong> for either candidate were found.
+            </p>
+
+            <p>
+            <em>This screenshot shows the “Events” page on the Cumberland County Democrats website at the time of review,
+            which displayed no upcoming events:</em>
+            </p>
+
+            <img src="assets/screenshots/cumberlandNJDemsEventPage.PNG" alt="Empty events page on Cumberland County Democrats site showing no upcoming events" style="max-width:100%;border:1px solid #ccc;">
+        </div>
+    </details>
+
+    <br>
+    <br>
+
      <div class="candidate-agenda">
 
         <h4 class="sub-heading">Agenda</h4>
