path fix attempt for screenshot capizola events section

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -341,7 +341,7 @@
             which displayed no upcoming events:</em>
             </p>
 
-            <img src="assets/screenshots/cumberlandNJDemsEventPage.PNG" alt="Empty events page on Cumberland County Democrats site showing no upcoming events" style="max-width:100%;border:1px solid #ccc;">
+            <img src="../../../assets/screenshots/cumberlandNJDemsEventPage.PNG" alt="Empty events page on Cumberland County Democrats site showing no upcoming events" style="max-width:100%;border:1px solid #ccc;">
         </div>
     </details>
 
